--- a/menu.html
+++ b/menu.html
@@ -3,41 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>감성고기 메뉴판</title>
+    <title>감성고기 프리미엄 메뉴판</title>
     <style>
-        body { margin: 0; padding: 15px; background-color: #ffffff; font-family: 'Pretendard', sans-serif; }
-        .grid-container { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; max-width: 350px; margin: 0 auto; }
-        .product-card { background: #fff; border-radius: 18px; overflow: hidden; border: 1px solid #eee; transition: 0.2s; }
-        .product-card:hover { transform: translateY(-3px); box-shadow: 0 10px 20px rgba(0,0,0,0.05); }
-        .img-box { background: #f0f0f0; height: 110px; display: flex; align-items: center; justify-content: center; color: #aaa; font-size: 11px; font-weight: bold; text-align: center; line-height: 1.4; }
-        .info { padding: 12px; }
-        .tag { color: #ff4d4d; font-size: 10px; font-weight: 800; text-transform: uppercase; }
-        .p-name { display: block; font-size: 15px; font-weight: 700; margin: 4px 0; color: #111; }
-        .p-price { font-size: 13px; color: #666; }
-        .p-price b { color: #000; font-size: 14px; }
-        .btn { display: block; width: 100%; padding: 10px 0; background: #111; color: #fff; text-align: center; text-decoration: none; font-size: 12px; font-weight: bold; margin-top: 10px; border-radius: 10px; }
+        /* 모바일 최적화 및 가로 스크롤 설정 */
+        body { margin: 0; padding: 15px; background-color: #ffffff; font-family: 'Pretendard', sans-serif; overflow-x: hidden; }
+        .menu-wrapper { 
+            display: flex; 
+            overflow-x: auto; 
+            gap: 12px; 
+            padding-bottom: 15px; 
+            -webkit-overflow-scrolling: touch; /* 아이폰 부드러운 스크롤 */
+        }
+        /* 스크롤바 디자인 */
+        .menu-wrapper::-webkit-scrollbar { height: 4px; }
+        .menu-wrapper::-webkit-scrollbar-thumb { background: #eee; border-radius: 10px; }
+
+        .grid-container { 
+            display: grid; 
+            grid-template-columns: repeat(3, 110px); /* 3열 고정 */
+            grid-template-rows: repeat(3, auto); /* 총 9개 상품 (3행) */
+            gap: 12px; 
+        }
+
+        .product-card { 
+            width: 110px; 
+            background: #fff; 
+            border-radius: 12px; 
+            overflow: hidden; 
+            border: 1px solid #f0f0f0; 
+            display: flex;
+            flex-direction: column;
+        }
+
+        .img-box { background: #f8f8f8; height: 80px; display: flex; align-items: center; justify-content: center; color: #ccc; font-size: 10px; text-align: center; }
+        
+        .info { padding: 8px; flex-grow: 1; display: flex; flex-direction: column; justify-content: space-between; }
+        .tag { color: #ff4d4d; font-size: 8px; font-weight: 800; }
+        .p-name { display: block; font-size: 11px; font-weight: 700; margin: 2px 0; color: #111; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+        .p-price { font-size: 10px; color: #666; }
+        .p-price b { color: #000; font-size: 11px; }
+
+        .btn { 
+            display: block; 
+            width: 100%; 
+            padding: 6px 0; 
+            background: #111; 
+            color: #fff; 
+            text-align: center; 
+            text-decoration: none; 
+            font-size: 10px; 
+            font-weight: bold; 
+            margin-top: 8px; 
+            border-radius: 6px; 
+        }
     </style>
 </head>
 <body>
-    <div class="grid-container">
-        <div class="product-card">
-            <div class="img-box">📸 사장님 전용<br>고기 사진 자리</div>
-            <div class="info">
-                <span class="tag">BEST</span>
-                <span class="p-name">한우 육회 세트</span>
-                <span class="p-price">200g / <b>19,000원</b></span>
-                <a href="#" class="btn">주문하기</a>
+    <div class="menu-wrapper">
+        <div class="grid-container">
+            <div class="product-card">
+                <div class="img-box">🥩</div>
+                <div class="info">
+                    <span class="tag">BEST</span>
+                    <span class="p-name">한우 등심</span>
+                    <span class="p-price"><b>15,800원</b></span>
+                    <a href="#" class="btn">담기</a>
+                </div>
             </div>
-        </div>
-        <div class="product-card">
-            <div class="img-box">📸 마블링 확인용<br>실사 사진 자리</div>
-            <div class="info">
-                <span class="tag">HIT</span>
-                <span class="p-name">벌집 삼겹살</span>
-                <span class="p-price">500g / <b>14,500원</b></span>
-                <a href="#" class="btn">주문하기</a>
+            <div class="product-card">
+                <div class="img-box">🐖</div>
+                <div class="info">
+                    <span class="tag">HOT</span>
+                    <span class="p-name">삼겹살</span>
+                    <span class="p-price"><b>2,900원</b></span>
+                    <a href="#" class="btn">담기</a>
+                </div>
             </div>
-        </div>
+            <div class="product-card">
+                <div class="img-box">🐂</div>
+                <div class="info">
+                    <span class="tag">추천</span>
+                    <span class="p-name">치마살</span>
+                    <span class="p-price"><b>18,000원</b></span>
+                    <a href="#" class="btn">담기</a>
+                </div>
+            </div>
+            </div>
     </div>
 </body>
 </html>
